--- a/login.html
+++ b/login.html
@@ -122,7 +122,7 @@
         </div>
 
         <!-- Register Form -->
-        <div class="bg-white/60 backdrop-blur-sm rounded-2xl p-8 shadow-lg border border-white/20">
+        <!-- <div class="bg-white/60 backdrop-blur-sm rounded-2xl p-8 shadow-lg border border-white/20">
           <div class="flex items-center gap-3 mb-6">
             <div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center">
               <i class="fas fa-user-plus text-purple-600"></i>
@@ -181,7 +181,7 @@
               Create Account
             </button>
           </form>
-        </div>
+        </div> -->
       </div>
       
       <!-- Footer -->
